<?xml version="1.0" encoding="utf-8"?>

<!--linear layout to wrap everything-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignup.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp"
    android:background="@color/reg_background">

<!--    adding logo for app-->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:padding="15dp"
        android:contentDescription="image"
        app:srcCompat="@drawable/task_logo" />




<!--    text message for user-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:text="Please login to use Todo app"
        android:textStyle="bold"
        android:textColor="#fff"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Username"
        android:textColorHint="@android:color/background_light">

    <!--    input fields for username and password -->
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:textColor="@color/background"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="10sp"
        />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Password"
        android:textColorHint="@android:color/background_light">
<!--        app:passwordToggleEnabled="true"-->


    <!--    login button-->
    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/background"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="10sp"
         />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:background="@drawable/button_rounded"/>


<!--        adding text view for registration link-->

<!--        not a registered user text-view-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_registered_user"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="#fff"/>

<!--        registration link-->
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/register"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/button_rounded"/>

</LinearLayout>