<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reg_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginSignup.RegisterActivity">

    <!--    adding logo for app-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="image"
        android:padding="15dp"
        app:srcCompat="@drawable/task_logo" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Full Name"
        android:textColorHint="@android:color/background_light">

        <!--    text message for user-->
        <!--    input fields for username and password -->

        <EditText
            android:id="@+id/edittext_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_supervisor_account_black_24dp"
            android:drawablePadding="10sp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/background"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/username"
        android:textColorHint="@color/background">

        <!--    text message for user-->
        <!--    input fields for username and password -->

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawablePadding="10sp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/background"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/background">

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_24dpr"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="Email"
            android:inputType="text"
            android:textColor="@color/background"
            android:textSize="18sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="Password"
        android:textColorHint="@color/background">

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/background"
            android:textSize="18sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/background">

        <!--    another input for password-->
        <EditText
            android:id="@+id/edittext_cnf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/background"
            android:textSize="18sp" />


    </com.google.android.material.textfield.TextInputLayout>


    <!--    login button-->
    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:shadowColor="@color/background"
        android:text="@string/register"
        android:textColor="#fff" />

    <!--        adding text view for registration link-->
    <!--        not a registered user text-view-->
    <!--        registration link-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Already Registered?"
        android:textColor="#fff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        android:text="LOGIN"
        android:textColor="#fff"
        android:textStyle="bold" />


</LinearLayout>